# minibadge

./: .gitignore  README.md  readme.md
.github/workflows/: telegram.yml
antani_hw/: .gitignore  README.md  antani_hw.kicad_pcb  antani_hw.kicad_pro  antani_hw.kicad_sch  rp2040.kicad_sch  usb.kicad_sch
antani_hw/lib/: LED_WS2812B_PLCC4_5.0x5.0mm_P3.2mm_handsolder.kicad_mod  TSA016A2518C.step  bottonepiccolo_C2888430.kicad_mod  ir_receiver.kicad_mod  jlc_toolinghole.kicad_mod
antani_sw/: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  usb_messages.capnp
antani_sw/.cargo/: config.toml
antani_sw/src/: capnp.rs  main.rs  rgbeffects.rs  scenes.rs  usb.rs  ws2812.rs
docs/: README.md  datasheet.cls  manuale.tex
minibadge-cli/: Cargo.toml  README.md  build.rs
minibage-cli/: Cargo.toml  README.md  readme.md  usb_messages.capnp
minibage-cli/src/: main.rs  midi.rs
